net order list, assist

--- a/tvcust/src/main/res/layout/activity_findpsw.xml
+++ b/tvcust/src/main/res/layout/activity_findpsw.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/login_bk"
     android:fitsSystemWindows="true"
-    tools:context=".ui.activity.ModifyPswActivity">
+    tools:context=".ui.activity.FindPswActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -34,17 +34,17 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/edit_modifypsw_password_old"
+                    android:id="@+id/edit_modifypsw_phone"
                     style="@style/edit_hidden_login"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:drawableLeft="@drawable/icon_login_password"
+                    android:drawableLeft="@drawable/icon_login_phone"
                     android:drawablePadding="20dp"
-                    android:hint="旧密码"
-                    android:maxLength="16"
-                    android:inputType="textPassword"/>
+                    android:maxLength="11"
+                    android:hint="手机号"
+                    android:inputType="textPersonName"/>
 
                 <View
                     android:layout_width="match_parent"
@@ -52,6 +52,44 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:background="@drawable/line" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        style="@style/edit_hidden_login"
+                        android:id="@+id/edit_modifypsw_vali"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="60dp"
+                        android:layout_marginLeft="20dp"
+                        android:drawableLeft="@drawable/icon_login_vali"
+                        android:drawablePadding="20dp"
+                        android:maxLength="6"
+                        android:hint="验证码"
+                        android:inputType="number" />
+
+                    <TextView
+                        android:id="@+id/text_modifypsw_getvali"
+                        style="@style/text_nomal_small_blue"
+                        android:layout_width="102dp"
+                        android:layout_height="43dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:background="@drawable/shape_rect_corner_blue_full_line"
+                        android:text="获取验证码"/>
+
+                </LinearLayout>
+
+                <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/line" />
 
                 <EditText
                     android:id="@+id/edit_modifypsw_password_new"
@@ -63,26 +101,6 @@
                     android:drawableLeft="@drawable/icon_login_password"
                     android:drawablePadding="20dp"
                     android:hint="新密码"
-                    android:maxLength="16"
-                    android:inputType="textPassword"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/line" />
-
-                <EditText
-                    android:id="@+id/edit_modifypsw_password_new_repeat"
-                    style="@style/edit_hidden_login"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:drawableLeft="@drawable/icon_login_password"
-                    android:drawablePadding="20dp"
-                    android:hint="确认密码"
                     android:maxLength="16"
                     android:inputType="textPassword"/>
 
@@ -105,16 +123,16 @@
                 app:cpb_textIdle="完成修改" />
 
             <!--<TextView-->
-            <!--android:id="@+id/btn_go"-->
-            <!--android:layout_width="246dp"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:layout_marginTop="36dp"-->
-            <!--android:background="@drawable/shape_rect_corner_blue_full"-->
-            <!--android:gravity="center"-->
-            <!--android:text="完成修改"-->
-            <!--android:textColor="@color/sb_blue_hint"-->
-            <!--android:textSize="16dp" />-->
+                <!--android:id="@+id/btn_go"-->
+                <!--android:layout_width="246dp"-->
+                <!--android:layout_height="50dp"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:layout_marginTop="36dp"-->
+                <!--android:background="@drawable/shape_rect_corner_blue_full"-->
+                <!--android:gravity="center"-->
+                <!--android:text="完成修改"-->
+                <!--android:textColor="@color/sb_blue_hint"-->
+                <!--android:textSize="16dp" />-->
 
         </LinearLayout>
 
