--- a/tvcust/src/main/res/layout/item_recycle_order.xml
+++ b/tvcust/src/main/res/layout/item_recycle_order.xml
@@ -14,7 +14,13 @@
         android:background="@color/white"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
         <TextView
+            android:id="@+id/text_order_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
@@ -24,6 +30,21 @@
             android:textSize="@dimen/text_small"
             android:text="订单编号:685478954898" />
 
+            <TextView
+                android:id="@+id/text_order_time"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical|right"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="16dp"
+                android:textColor="@color/cc_text_dark"
+                android:textSize="@dimen/text_small"
+                android:text="2016-06-27" />
+
+        </LinearLayout>
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -32,6 +53,7 @@
             android:layout_marginRight="10dp">
 
             <ImageView
+                android:id="@+id/img_order_pic"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_alignParentLeft="true"
@@ -50,6 +72,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/text_order_question"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -58,6 +81,7 @@
                     android:textSize="@dimen/text_nomal"/>
 
                 <TextView
+                    android:id="@+id/text_order_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
