--- a/tvcust/src/main/res/layout/item_recycle_orderdetail.xml
+++ b/tvcust/src/main/res/layout/item_recycle_orderdetail.xml
@@ -22,6 +22,7 @@
             android:paddingTop="12dp">
 
             <TextView
+                android:id="@+id/text_orderdescribe_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -30,6 +31,7 @@
                 android:textSize="@dimen/text_nomal" />
 
             <TextView
+                android:id="@+id/text_orderdescribe_time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -47,6 +49,7 @@
             android:background="@drawable/line"/>
 
         <TextView
+            android:id="@+id/text_orderdescribe_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
