--- a/tvcust/src/main/res/layout/layout_fail.xml
+++ b/tvcust/src/main/res/layout/layout_fail.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="一条记录也没有啊~"
+        android:text="加载失败，点击重试"
         android:textColor="@color/sb_text_dark" />
 
 </LinearLayout>
