--- a/tvcust/src/main/res/layout/item_recycle_orderallocate.xml
+++ b/tvcust/src/main/res/layout/item_recycle_orderallocate.xml
@@ -21,6 +21,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/img_orderallocate_header"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -29,6 +30,7 @@
                 android:src="@drawable/icon_allocate_header_default" />
 
             <TextView
+                android:id="@+id/text_orderallocate_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
