--- a/tvcust/src/main/res/layout/activity_copy.xml
+++ b/tvcust/src/main/res/layout/activity_copy.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sb_bk"
     android:fitsSystemWindows="true"
-    tools:context="com.sobey.tvcust.ui.activity.AssistActivity">
+    android:background="@color/sb_bk"
+    tools:context="com.sobey.tvcust.ui.activity.CopyActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -27,45 +27,8 @@
         android:id="@+id/showingroup"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            app:cardCornerRadius="0dp">
-
-            <LinearLayout
-                android:id="@+id/lay_assist_tocopy"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:foreground="?attr/selectableItemBackground"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="抄送" />
-
-                <TextView
-                    android:id="@+id/text_assist_copyers"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_weight="1"
-                    android:text="张经理"
-                    android:textColor="@color/sb_text_dark" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:src="@drawable/icon_next_dark" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:orientation="vertical">
 
         <com.liaoinstan.springview.widget.SpringView
             android:id="@+id/spring"
@@ -76,10 +39,10 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:paddingBottom="5dp"
                 android:clipToPadding="false"
-                android:paddingBottom="5dp" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </com.liaoinstan.springview.widget.SpringView>
 
@@ -91,16 +54,16 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:background="#00000000"
             android:textColor="@color/white"
             android:textSize="@dimen/text_big"
+            android:background="#00000000"
+            app:cpb_selectorIdle="@drawable/idle_state_selector"
             app:cpb_colorIndicator="@color/sb_blue"
             app:cpb_colorIndicatorBackground="@color/sb_blue_hint_trans"
             app:cpb_colorProgress="#00000000"
             app:cpb_iconComplete="@drawable/ic_action_accept"
             app:cpb_iconError="@drawable/ic_action_cancel"
-            app:cpb_selectorIdle="@drawable/idle_state_selector"
-            app:cpb_textIdle="请求协助" />
+            app:cpb_textIdle="抄送" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
