--- a/tvcust/src/main/res/layout/activity_medetail.xml
+++ b/tvcust/src/main/res/layout/activity_medetail.xml
@@ -78,7 +78,7 @@
                         android:layout_marginBottom="40dp"
                         android:layout_marginTop="30dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/me_header_defalt" />
+                        android:src="@drawable/default_bk" />
 
                 </LinearLayout>
 
@@ -127,7 +127,8 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="1dp"
+                        android:layout_height="1px"
+                        android:layout_marginLeft="20dp"
                         android:background="@drawable/line" />
 
                     <LinearLayout
@@ -158,7 +159,8 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="1dp"
+                        android:layout_height="1px"
+                        android:layout_marginLeft="20dp"
                         android:background="@drawable/line" />
 
                     <LinearLayout
@@ -193,7 +195,8 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="1dp"
+                        android:layout_height="1px"
+                        android:layout_marginLeft="20dp"
                         android:background="@drawable/line" />
 
                     <LinearLayout
