--- a/tvcust/src/main/res/layout/activity_reqfix.xml
+++ b/tvcust/src/main/res/layout/activity_reqfix.xml
@@ -30,38 +30,93 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/lay_reqfix_quekind"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="0dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/lay_reqfix_quekind"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="问题类别"
+                        android:textColor="@color/sb_text_blank_deep_light"
+                        android:textSize="@dimen/text_big_nomal" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/text_question_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="选择问题分类"
+                        android:textColor="@color/sb_blue"
+                        android:textSize="@dimen/text_big_nomal" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lay_reqfix_selectuser"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="问题类别"
-                    android:textColor="@color/sb_text_blank_deep_light"
-                    android:textSize="@dimen/text_big_nomal" />
+                    android:foreground="?attr/selectableItemBackground"
+                    android:orientation="vertical">
 
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/line" />
 
-                <TextView
-                    android:id="@+id/text_question_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="选择问题分类"
-                    android:textColor="@color/sb_blue"
-                    android:textSize="@dimen/text_big_nomal" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="代理申报"
+                            android:textColor="@color/sb_text_blank_deep_light"
+                            android:textSize="@dimen/text_big_nomal" />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1" />
+
+                        <TextView
+                            android:id="@+id/text_user_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="选择申报用户"
+                            android:textColor="@color/sb_blue"
+                            android:textSize="@dimen/text_big_nomal" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -82,11 +137,11 @@
                 android:layout_height="0dp"
                 android:layout_margin="16dp"
                 android:layout_weight="1"
-                android:maxLength="254"
                 android:ems="10"
                 android:gravity="top"
                 android:hint="输入您问题的描述"
                 android:inputType="textMultiLine"
+                android:maxLength="254"
                 android:minLines="8" />
 
             <View
@@ -137,18 +192,18 @@
             android:layout_weight="1" />
 
         <!--<TextView-->
-            <!--android:id="@+id/btn_go"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:layout_marginBottom="10dp"-->
-            <!--android:layout_marginLeft="10dp"-->
-            <!--android:layout_marginRight="10dp"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:background="@color/sb_bk_dark"-->
-            <!--android:gravity="center"-->
-            <!--android:text="问题提交"-->
-            <!--android:textColor="@color/white"-->
-            <!--android:textSize="@dimen/text_big" />-->
+        <!--android:id="@+id/btn_go"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:background="@color/sb_bk_dark"-->
+        <!--android:gravity="center"-->
+        <!--android:text="问题提交"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:textSize="@dimen/text_big" />-->
 
         <com.dd.CircularProgressButton
             android:id="@+id/btn_go"
@@ -158,15 +213,15 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:background="#00000000"
             android:textColor="@color/white"
             android:textSize="@dimen/text_big"
-            android:background="#00000000"
-            app:cpb_selectorIdle="@drawable/idle_state_selector"
             app:cpb_colorIndicator="@color/sb_blue"
             app:cpb_colorIndicatorBackground="@color/sb_blue_hint_trans"
             app:cpb_colorProgress="#00000000"
             app:cpb_iconComplete="@drawable/ic_action_accept"
             app:cpb_iconError="@drawable/ic_action_cancel"
+            app:cpb_selectorIdle="@drawable/idle_state_selector"
             app:cpb_textIdle="问题提交" />
 
     </LinearLayout>
