--- a/tvcust/src/main/res/layout/fragment_me.xml
+++ b/tvcust/src/main/res/layout/fragment_me.xml
@@ -47,7 +47,7 @@
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="-40dp"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/me_header_defalt" />
+                            android:src="@drawable/default_bk" />
 
                         <TextView
                             android:id="@+id/text_me_name"
@@ -708,16 +708,6 @@
             android:layout_marginRight="20dp"
             android:scaleType="center"
             android:src="@drawable/icon_me_tosign" />
-
-        <TextView
-            android:id="@+id/btn_go_login"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="right"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="登录"
-            android:textColor="@color/white" />
 
     </android.support.v7.widget.Toolbar>
 
