--- a/tvcust/src/main/res/layout/activity_orderdetail.xml
+++ b/tvcust/src/main/res/layout/activity_orderdetail.xml
@@ -8,190 +8,7 @@
     android:fitsSystemWindows="true"
     tools:context="com.sobey.tvcust.ui.activity.OrderDetailActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
-            app:navigationIcon="@drawable/icon_bank"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-
-            <LinearLayout
-                android:id="@+id/btn_go_orderprog"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginRight="20dp"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/icon_allocate_orderprog" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:text="查看进度"
-                    android:textColor="@color/sb_blue"
-                    android:textSize="@dimen/text_tiny" />
-
-            </LinearLayout>
-        </android.support.v7.widget.Toolbar>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
-
-            <ImageView
-                android:id="@+id/img_orderdetail_header"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:scaleType="center"
-                android:src="@drawable/icon_order_fix" />
-
-            <TextView
-                android:id="@+id/text_orderdetail_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/img_orderdetail_header"
-                android:layout_marginLeft="10dp"
-                android:layout_toEndOf="@+id/img_orderdetail_header"
-                android:layout_toRightOf="@+id/img_orderdetail_header"
-                android:textColor="@color/sb_text_blank"
-                android:textSize="@dimen/text_nomal" />
-
-            <TextView
-                android:id="@+id/text_orderdetail_problem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/text_orderdetail_name"
-                android:layout_alignStart="@+id/text_orderdetail_name"
-                android:layout_below="@+id/text_orderdetail_name"
-                android:layout_marginTop="2dp"
-                android:text="问题："
-                android:textColor="@color/sb_text_dark_blank"
-                android:textSize="@dimen/text_nomal_small" />
-
-            <TextView
-                android:id="@+id/text_orderdetail_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/text_orderdetail_problem"
-                android:layout_alignStart="@+id/text_orderdetail_problem"
-                android:layout_below="@+id/text_orderdetail_problem"
-                android:layout_marginTop="2dp"
-                android:text="订单号："
-                android:textColor="@color/sb_text_dark_blank"
-                android:textSize="@dimen/text_nomal_small" />
-        </RelativeLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:background="@color/white"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/line" />
-        </FrameLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical"
-            app:layout_scrollFlags="scroll|enterAlways">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="15dp">
-
-                <TextView
-                    android:id="@+id/text_orderdetail_user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="申请人："
-                    android:textColor="@color/sb_text_blank"
-                    android:textSize="@dimen/text_nomal" />
-
-                <TextView
-                    android:id="@+id/text_orderdetail_user_phone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
-                    android:text="电话："
-                    android:textColor="@color/sb_text_dark_blank"
-                    android:textSize="@dimen/text_nomal_small" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/lay_orderdetail_tsc"
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@drawable/line" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingBottom="20dp"
-                    android:paddingTop="15dp">
-
-                    <TextView
-                        android:id="@+id/text_orderdetail_tsc_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:text="处理人："
-                        android:textColor="@color/sb_text_blank"
-                        android:textSize="@dimen/text_nomal" />
-
-                    <TextView
-                        android:id="@+id/text_orderdetail_tsc_phone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="5dp"
-                        android:text="电话："
-                        android:textColor="@color/sb_text_dark_blank"
-                        android:textSize="@dimen/text_nomal_small" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-
-    </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
         android:id="@+id/showingroup"
@@ -215,18 +32,6 @@
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
-        <!--<TextView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:layout_marginBottom="10dp"-->
-            <!--android:layout_marginLeft="10dp"-->
-            <!--android:layout_marginRight="10dp"-->
-            <!--android:background="@color/sb_bk_dark"-->
-            <!--android:gravity="center"-->
-            <!--android:text="追加描述"-->
-            <!--android:textColor="@color/white"-->
-            <!--android:textSize="@dimen/text_big" />-->
-
         <com.dd.CircularProgressButton
             android:id="@+id/btn_go"
             android:layout_width="match_parent"
@@ -235,16 +40,53 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:background="#00000000"
             android:textColor="@color/white"
             android:textSize="@dimen/text_big"
-            android:background="#00000000"
-            app:cpb_selectorIdle="@drawable/idle_state_selector"
             app:cpb_colorIndicator="@color/sb_blue"
             app:cpb_colorIndicatorBackground="@color/sb_blue_hint_trans"
             app:cpb_colorProgress="#00000000"
             app:cpb_iconComplete="@drawable/ic_action_accept"
             app:cpb_iconError="@drawable/ic_action_cancel"
-            app:cpb_textIdle="追加描述" />
+            app:cpb_selectorIdle="@drawable/idle_state_selector"
+            app:cpb_textIdle="接受任务" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_last"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_big"
+                android:background="@color/sb_bk_dark"
+                android:text="反馈"/>
+
+            <Button
+                android:id="@+id/btn_next"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_big"
+                android:background="@color/sb_bk_dark"
+                android:text="协助"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
