--- a/tvcust/src/main/res/layout/fragment_order.xml
+++ b/tvcust/src/main/res/layout/fragment_order.xml
@@ -48,6 +48,7 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_order"
+            app:tabMode="scrollable"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/sb_bk_dark"
